# rm-lite

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  noxfile.py  pyproject.toml  scratch.ipynb
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml  python-package.yml
docs/: usage.md
docs/examples/: parallel_3d_dask.ipynb  rmclean_1d.ipynb  rmclean_2d.ipynb  rmclean_3d.ipynb  rmclean_multiscale_1d.ipynb  rmsynth_1d.ipynb  rmsynth_2d.ipynb  rmsynth_3d.ipynb  rmsynth_3d_stokes_i.ipynb  weighting_1d.ipynb
rm_lite/: _version.py
rm_lite/data/tests/: complex_noise_bad.npy  complex_spectrum_bad_fit.npy  complex_spectrum_bad_peak.npy  complex_spectrum_overflow.npy  complex_spectrum_zero_div.npy  stokes_i_arr_bad_fit.npy  stokes_i_arr_overflow.npy  stokes_i_error_arr_bad_fit.npy
rm_lite/tools_1d/: __init__.py  bwdepol.py  bwpredict.py  qufit.py  rmclean.py  rmsynth.py
rm_lite/tools_3d/: fitcube.py  peak_fit.py  rescale_model.py  rmclean.py  rmsynth.py
rm_lite/utils/: __init__.py  arrays.py  clean.py  dask_io.py  fitting.py  logging.py  misc.py  multiscale.py  rmsynth.py  simulate.py  spectra.py  synthesis.py
rmtools-lite/tools_1d/: do_QUfit_1D_mnest.py  rmtools_bwpredict.py
rmtools-lite/tools_3d/: RMpeakfit_3D.py
rmtools-lite/utils/: util_RM.py  util_plotTk.py
rmtools/tools_1d/: do_QUfit_1D_mnest.py  do_RMclean_1D.py  do_RMsynth_1D.py  do_RMsynth_1D_fromFITS.py  mk_test_ascii_data.py  rmtools_bwdepol.py
rmtools/tools_3d/: RMpeakfit_3D.py  do_RMclean_3D.py  do_RMsynth_3D.py  do_fitIcube.py  make_freq_file.py  mk_test_cube_data.py
rmtools/utils/: mpfit.py  normalize.py  util_FITS.py  util_RM.py  util_misc.py  util_plotFITS.py  util_plotTk.py
rmtools_lite/tools_1d/: __init__.py  bwdepol.py  bwpredict.py  calculate_RMSF.py  clean_model.py  do_QUfit_1D_mnest.py  do_RMsynth_1D.py  do_RMsynth_1D_fromFITS.py  qufit.py  rmclean.py  rmsynth.py  rmtools_bwdepol.py
rmtools_lite/tools_3d/: RMpeakfit_3D.py  do_RMclean_3D.py  do_fitIcube.py  fitcube.py  peak_fit.py  rescale_I_model_3D.py  rescale_model.py  rmclean.py  rmsynth.py
rmtools_lite/utils/: __init__.py  logging.py  misc.py  rmsynth.py  util_misc.py
tests/: QA_test.py  _dask_memory_worker.py  nufft_test.py  test_arrays.py  test_examples.py  test_logging.py  test_multiscale.py  test_nufft.py  test_options_defaults.py  test_rmsynth.py  test_synthesis_utils.py  test_sythesis_utils.py  test_tools_3d_dask.py  test_tools_3d_memory.py  test_tools_3d_stokes_i.py  test_weights.py
