[tool.poetry]
name = "rmtools-lite"
version = "0.0.0"
description = "A mini versions of RM-Tools"
authors = ["Alec Thomson"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "<2,>=1.22"
scipy = "*"
astropy = ">=6"
tdqm = "*"
deprecation = "*"
finufft = "*"

bilby = {version = ">=1.1.5", optional = true}
emcee = {version = "*", optional = true}
nestle = {version = "*", optional = true}
corner = {version = "*", optional = true}
schwimmbad = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
pre-commit = "*"
ruff = "*"
pytest = "*"

[tool.poetry.extras]
qufitting = ["bilby", "emcee", "nestle", "corner"]
parallel = ["schwimmbad"]
dev = ["pre-commit", "ruff", "pytest"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
